# Test-Devin-Opus-4.7-ML

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
conf/: config.yaml
reports/: MODEL_CARD.md  index.html
reports/metrics/: benchmark.json  eda_summary.json  test_metrics.json  tuning.json
src/teen_mh/: __init__.py  cli.py  config.py  data.py  eda.py  evaluate.py  features.py  train.py  tune.py
tests/: conftest.py  test_config.py  test_data.py  test_features.py  test_train_smoke.py
